fix(ui): fix horizontal scroll and improve responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 #root {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important
 }
 
